<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">蜗行</string>
    <string name="home">首页</string>
    <string name="nag">导航</string>
    <string name="music">音乐</string>
    <string name="oil">加油</string>
    <string name="vol">违章</string>
    <string name="preference_alert">车辆信息预警</string>
    <string name="preference_matence_gas">油量预警</string>
    <string name="preference_matence_gas_msg">当油量低于20%时，推送维护信息</string>
    <string name="preference_matence_mileage">里程数预警</string>
    <string name="preference_matence_mileage_msg">里程数没超过1500公里时，推送维护信息</string>
    <string name="preference_matence_engin">发动机预警</string>
    <string name="preference_matence_engin_msg">当发动机出现异常时，推送维护信息</string>
    <string name="preference_matence_speed">变速器预警</string>
    <string name="preference_matence_speed_msg">当变速器出现异常时，推送维护信息</string>
    <string name="preference_matence_light">车灯预警</string>
    <string name="preference_matence_light_msg">当车灯出现异常时，推送维护信息</string>
    <string name="title_activity_my_info">我的信息</string>
    <string name="title_activity_my_car">我的汽车</string>
    <string name="title_activity_my_order">我的订单</string>
    <string name="title_activity_my_regulation">我的违章</string>
    <string name="title_activity_now_playing">正在播放</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_setting_car">维护车辆</string>
    <string name="title_activity_city_list">城市</string>
    <string name="title_activity_short_province">省份简称</string>
    <string name="title_activity_regulation_result">违章</string>
    <string name="title_activity_province">省份</string>
    <string name="title_activity_custom_regulation">自定义查询</string>
    <string name="title_activity_add_car">添加汽车</string>
    <string name="title_activity_decode">扫描汽车</string>
    <string name="title_activity_crop_image">选择头像</string>
    <string name="title_activity_forgot_password">忘记密码</string>
    <string name="title_activity_edit_password">修改密码</string>
    <string name="title_activity_register">注册用户</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_more_gas">预约加油</string>
    <string name="title_activity_book_gas">生成订单</string>
    <string name="title_activity_route_plan">路经规划</string>
    <string name="title_activity_nav">导航</string>
    <string name="title_activity_order_detail">详细信息</string>
    <string name="title_activity_qrcode">二维码</string>
    <string name="title_activity_car_info">汽车信息</string>
    <string name="drawer_item_my_regulation">我的违章</string>
    <string name="drawer_item_setting">设置</string>
    <string name="drawer_item_about">关于</string>
    <string name="drawer_item_update">检查更新</string>
    <string name="drawer_item_feedback">用户反馈</string>
    <string name="drawer_item_my_info">我的信息</string>
    <string name="drawer_item_my_order">我的订单</string>
    <string name="drawer_item_my_car">我的汽车</string>
    <string name="drawer_item_now_playing">正在播放</string>
    <string name="drawer_item_matence_car">维护车辆</string>
    <string name="settings_head_user">用户</string>
    <string name="settings_head_car">车辆</string>
    <string name="settings_head_moregas">加油</string>
    <string name="settings_head_regulation">违章</string>
    <string name="settings_head_navigate">导航</string>
    <string name="settings_head_music">音乐</string>
    <string name="fragment_logo_imageview_contentDescription">广告</string>
    <string name="fragment_logo_button_login">登陆</string>
    <string name="button_register">注册</string>
    <string name="sex">性别</string>
    <string name="send_vertifh_code">发送验证码</string>
    <string name="fragment_login_autocompletetextview_user_name">手机号</string>
    <string name="fragment_login_edittext_user_password">密码</string>
    <string name="fragment_login_checkbox_save_password">保存密码</string>
    <string name="fragment_login_checkbox_auto_login">自动登录</string>
    <string name="fragment_login_button_login">立即登录</string>
    <string name="fragment_login_textview_forgot_password">忘记密码？</string>
    <string name="fragment_login_textview_register">立即注册？</string>
    <string name="edit_info">修改信息</string>
    <string name="cancle_login">退出登陆</string>
    <string name="submit_edit">提交修改</string>
    <string name="not_login_regulation">登录过后可以快速查询自己的违章信息</string>
    <string name="not_login">点击登陆</string>
    <string name="not_login_moregas">登录过后可以选择给爱车加油哦</string>
    <string name="custom_regulations">自定义查询</string>
    <string name="notice">友情提示</string>
    <string name="sure_to_quit">亲，你确定要退出？</string>
    <string name="settings_regulation_location">进入后定位</string>
    <string name="settings_regulation_location_info">是否通过定位来自动添加位置？</string>
    <string name="settings_music_auto">自动播放音乐</string>
    <string name="settings_music_auto_info">进入App后是否自动播放音乐？</string>
    <string name="settings_user_birthday">显示生日</string>
    <string name="settings_user_birthday_info">在菜单显示自己的生日</string>
    <string name="settings_car_push">推送消息</string>
    <string name="settings_car_auto_push">是否自动推送消息？</string>
    <string name="settings_music_continue">继续播放音乐</string>
    <string name="settings_music_continue_info">退出App后是否继续播放音乐？</string>
    <string name="register_basic_info_fragment_method_account_newaccount">新用户名</string>
    <string name="mobile_number">手机号码</string>
    <string name="security_code">验证码</string>
    <string name="register_basic_info_fragment_method_mobile_send_security_code">发送验证码</string>
    <string name="register_basic_info_fragment_method_email_address">邮箱</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="register_now">立即注册</string>
    <string name="nickname">昵称</string>
    <string name="register_detail_info_fragment_sex">性别</string>
    <string name="register_detail_info_fragment_sex_men">男</string>
    <string name="register_detail_info_fragment_sex_women">女</string>
    <string name="register_detail_info_fragment_birthday">生日</string>
    <string name="register_detail_info_fragment_submit">提交修改</string>
    <string name="sure">确定</string>
    <string name="allow">允许</string>
    <string name="setting">设置</string>
    <string name="cancle">取消</string>
    <string name="request_permission">申请权限</string>
    <string name="request_read_phone_state_permission">违章查询需要获取手机状态权限！</string>
    <string name="request_location_permission">我们需要位置信息，来更好的服务您！</string>
    <string name="permission_denie">权限获取失败，你可以手机在设置中将其打开</string>
    <string name="cxy_error">网络导致车首页服务加载错误，请稍候再试！</string>
    <string name="now_to_setting_permission">现在取设置权限</string>
    <string name="request_music_permission">音乐需要读取存储歌曲的权限！</string>
    <string name="request_camera_permission">二维码扫描需要打开相机权限，来更好的服务您！</string>
    <string name="request_camera_file_permission">剪切图片需要相机和照片读出，来更好的服务您！</string>
    <string name="request_write_file_permission">检查更新需要下载apk到本地的权限，来更好的服务您！</string>
    <string name="no_regulation_record">恭喜, 没有查到违章记录！</string>
    <string name="querying_and_laoding">正在查询, 请稍候 &#8230;</string>
    <string name="csy_form_tip">目前仅支持小型汽车查询</string>
    <string name="csy_btn_query">开始查询</string>
    <string name="csy_cxdz_lab">查询地</string>
    <string name="csy_cxdz_tip">请选择查询地</string>
    <string name="csy_chepai_lab">车牌号</string>
    <string name="csy_chepai_tip">请输入车牌号后6位</string>
    <string name="csy_chejia_lab">车架号</string>
    <string name="csy_engine_lab">发动机号</string>
    <string name="csy_close">关闭</string>
    <string name="regulation_place">违章地点</string>
    <string name="regulation_behavior">违章行为</string>
    <string name="navigate_tts_type">语音播报模式</string>
    <string name="navigate_tts_type_newman">新手</string>
    <string name="navigate_tts_type_professor">专家</string>
    <string name="navigate_tts_type_none">静音</string>
    <string name="navigate_tts_mode">语音播报内容</string>
    <string name="navigate_tts_mode_eye">电子眼</string>
    <string name="navigate_tts_mode_speed">限速提醒</string>
    <string name="navigate_tts_mode_safe">安全驾驶</string>
    <string name="navigate_tts_mode_condition">前方路况</string>
    <string name="navigate_tts_mode_straght">直行顺行提醒</string>
    <string name="navigate_condition">实时路况</string>
    <string name="navigate_full_condition">全程路况条</string>
    <string name="navigate_day_or_night">夜晚模式</string>
    <string name="navigate_power">省电模式</string>
    <string name="action_settings">设置</string>
    <string name="add_to_next">添加到下一曲播放</string>
    <string name="add_to_queue">添加到播放列表</string>
    <string name="add_to_palylist">添加到列表</string>
    <string name="to_ablum">转到专辑</string>
    <string name="to_artist">转到艺术家</string>
    <string name="accessibility_play">播放</string>
    <string name="accessibility_pause">暂停</string>
    <string name="accessibility_next">下一首</string>
    <string name="accessibility_prev">上一首</string>
    <string name="accessibility_shuffle">随机</string>
    <string name="accessibility_shuffle_all">全部随机</string>
    <string name="accessibility_repeat">循环</string>
    <string name="accessibility_repeat_all">全部循环</string>
    <string name="accessibility_repeat_one">单曲循环</string>
    <string name="accessibility_queue">开启队列</string>
    <string name="accessibility_browse">浏览音乐</string>
    <string name="menu_sort_by">排序</string>
    <string name="sort_order_entry_az">A 到 Z</string>
    <string name="sort_order_entry_za">Z 到 A</string>
    <string name="sort_order_entry_artist">艺术家</string>
    <string name="sort_order_entry_album">专辑</string>
    <string name="sort_order_entry_year">年份</string>
    <string name="sort_order_entry_track_number">曲目编号</string>
    <string name="sort_order_entry_duration">时长</string>
    <string name="sort_order_entry_date_added">添加时间</string>
    <string name="sort_order_entry_track_list">曲目列表</string>
    <string name="sort_order_entry_number_of_songs">歌曲数量</string>
    <string name="sort_order_entry_number_of_albums">专辑数量</string>
    <string name="sort_order_entry_filename">文件名</string>
    <string name="error_playing_track">播放曲目错误</string>
    <string name="playlist_last_added">最新添加</string>
    <string name="playlist_recently_played">最近播放</string>
    <string name="playlist_top_tracks">我的最佳单曲</string>
    <string name="timber_source">报告任何 bug，在<u> 这里 </u>。</string>
    <string name="timber_feature_request">提出任何特性请求通过 Google+ 社区，在 <u> 这里 </u>。</string>
    <string name="menu_show_as">视图</string>
    <string name="menu_show_as_entry_list">列表</string>
    <string name="menu_show_as_entry_grid">网格</string>
    <string name="light">默认主题</string>
    <string name="dark">似水年华</string>
    <string name="black">黑胶唱片</string>
    <string name="last_opened">上次打开</string>
    <string name="songs">歌曲</string>
    <string name="albums">专辑</string>
    <string name="artists">艺术家</string>
    <string name="library">库</string>
    <string name="playlists">播放列表</string>
    <string name="playing_queue">播放队列</string>
    <string name="now_playing">正在播放</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="search">搜索</string>
    <string name="action_shuffle_all">随机</string>
    <string name="action_equalizer">音质和音效</string>
    <string name="search_library">在库中搜索音乐</string>
    <string name="select_theme">选择主题</string>
    <string name="choose_theme_throughout">选择一个主题，在整个应用中。</string>
    <string name="choose_start_page">选择起始页，在启动时显示。</string>
    <string name="start_page">起始页</string>
    <string name="artist_in_grid">艺术家网格显示</string>
    <string name="toggle_artists_grid">切换艺术家显示，在 2×2 的网格中。</string>
    <string name="toggle_system_animations">切换系统动画，在整个应用中。</string>
    <string name="system_animations">系统动画</string>
    <string name="toggle_animations">切换过渡动画，在整个应用中。</string>
    <string name="animations">动画</string>
    <string name="now_playing_selector">选择正在播放画面，从4个不同风格中。</string>
</resources>